clusters/sirius/apps/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: homarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: homarr.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr
            port:
              number: 7575
